@@ -3,6 +3,7 @@ stunnel4 (3:4.53-2) UNRELEASED; urgency=medium
   * New maintainer.  Closes: #738093
   * Add DEP-3 headers to the patch files.
   * Switch to debhelper override rules.
+  * Use autotools_dev's debhelper plugin to refresh config.{sub,guess}.
 
  -- Peter Pentchev <roam@ringlet.net>  Tue, 25 Feb 2014 13:52:49 +0200
 
